- merged java 11 branch in java 8 branch