@@ -3,7 +3,6 @@ package hzt.collections;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -13,7 +12,7 @@ class MutableListXTest {
 
     @Test
     void testMutableListRemoveFirst() {
-        final MutableList<Integer> integers = MutableListX.of(1, 2, 3, 4, 5);
+        final MutableListX<Integer> integers = MutableListX.of(1, 2, 3, 4, 5);
 
         final boolean removed = integers.removeFirst();
         final boolean removed2 = integers.removeFirst();
@@ -21,13 +20,13 @@ class MutableListXTest {
         assertAll(
                 () -> assertTrue(removed),
                 () -> assertTrue(removed2),
-                () -> assertEquals(List.of(3,4, 5), integers)
+                () -> assertEquals(Arrays.asList(3,4, 5), integers)
         );
     }
 
     @Test
     void testMutableListRemoveLast() {
-        final MutableList<Integer> integers = MutableListX.of(1, 2, 3, 4, 5);
+        final MutableListX<Integer> integers = MutableListX.of(1, 2, 3, 4, 5);
 
         final boolean removed = integers.removeLast();
 
