@@ -2,11 +2,14 @@ package hzt.sequences.primitives;
 
 import hzt.collections.MutableListX;
 import hzt.numbers.IntX;
+import hzt.progressions.IntProgression;
 import hzt.ranges.IntRange;
+import hzt.statistics.IntStatistics;
 import hzt.utils.It;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.IntSummaryStatistics;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.IntStream;
@@ -20,12 +23,12 @@ class IntSequenceTest {
 
     @Test
     void testSteppedIntRange() {
-        var list = MutableListX.<Integer>empty();
+        MutableListX<Integer> list = MutableListX.<Integer>empty();
         for (int i : IntRange.until(15).step(4)) {
             It.println(i);
             list.add(i);
         }
-        assertEquals(List.of(0, 4, 8, 12), list);
+        assertEquals(Arrays.asList(0, 4, 8, 12), list);
     }
 
     @Test
@@ -66,7 +69,7 @@ class IntSequenceTest {
 
     @Test
     void testDescendingSteppedIntRange() {
-        var list = MutableListX.<Integer>empty();
+        MutableListX<Integer> list = MutableListX.<Integer>empty();
         for (int i : IntRange.from(100).downTo(20).step(5)) {
             It.println(i);
             list.add(i);
@@ -79,7 +82,7 @@ class IntSequenceTest {
 
     @Test
     void testDescendingIntRange() {
-        final var integers = IntRange.from(100).downTo(20);
+        final IntProgression integers = IntRange.from(100).downTo(20);
         assertAll(
                 () -> assertEquals(81, integers.count()),
                 () -> assertEquals(100, integers.first())
@@ -93,9 +96,9 @@ class IntSequenceTest {
 
     @Test
     void testStats() {
-        final var expected = IntStream.range(0, 100).summaryStatistics();
+        final IntSummaryStatistics expected = IntStream.range(0, 100).summaryStatistics();
 
-        final var actual = IntRange.of(0, 100).stats();
+        final IntStatistics actual = IntRange.of(0, 100).stats();
 
         It.println("actual = " + actual);
 
@@ -109,9 +112,9 @@ class IntSequenceTest {
 
     @Test
     void testIntRangeFromIntStream() {
-        final var expected = IntStream.range(0, 100).summaryStatistics();
+        final IntSummaryStatistics expected = IntStream.range(0, 100).summaryStatistics();
 
-        final var actual = IntSequence.of(IntStream.range(0, 100)).stats();
+        final IntStatistics actual = IntSequence.of(IntStream.range(0, 100)).stats();
 
         It.println("actual = " + actual);
 
@@ -127,13 +130,13 @@ class IntSequenceTest {
     void intRangeFromIntArray() {
         int[] array = {1, 2, 3, 4, 5, 4, 6, 4, 3, 4, 2, 2};
 
-        final var expected = IntStream.of(array)
+        final long[] expected = IntStream.of(array)
                 .mapToLong(It::asLong)
                 .filter(l -> l > 3)
                 .toArray();
 
 
-        final var longs = IntSequence.of(array)
+        final long[] longs = IntSequence.of(array)
                 .mapToLong(It::asLong)
                 .filter(l -> l > 3)
                 .toArray();
@@ -148,7 +151,7 @@ class IntSequenceTest {
     void testSortedDescending() {
         int [] array = {1, 4, 5, 3, 6, 7, 4, 8, 5, 9, 4};
 
-        final var sorted = IntSequence.of(array)
+        final int[] sorted = IntSequence.of(array)
                 .sortedDescending()
                 .toArray();
 
@@ -161,7 +164,7 @@ class IntSequenceTest {
     void testSortedThenComparingUnsignedUsingIntComparator() {
         int [] array = {-1, 4, -5, 3, -6, 7, -4, 8, -5, 9, -4};
 
-        final var sorted = IntSequence.of(array)
+        final int[] sorted = IntSequence.of(array)
                 .sorted(comparing(Integer::compare)
                         .thenComparing(Integer::compareUnsigned))
                 .toArray();
@@ -175,7 +178,7 @@ class IntSequenceTest {
     void testParallelStreamFromIntSequence() {
         // a parallel stream does not maintain the sorted nature of the sequence
         // when using a sequential stream, then the order is maintained
-        final var doubles = IntSequence.generate(0, i -> i + 2)
+        final double[] doubles = IntSequence.generate(0, i -> i + 2)
                 .filter(IntX.multipleOf(4))
                 .take(10_000)
                 .sortedDescending()
@@ -195,7 +198,7 @@ class IntSequenceTest {
     @Test
     void testToByteArray() {
         AtomicInteger index = new AtomicInteger();
-        final var LENGTH = 10_000_000;
+        final int LENGTH = 10_000_000;
         byte[] array = new byte[LENGTH];
 
         IntSequence.generate(Byte.MIN_VALUE, i -> (i == Byte.MAX_VALUE) ? Byte.MIN_VALUE : ++i)
